auto/k3s/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: k3d-registry.local:12345/postgres:18.1-trixie
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresdata
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
