auto/k3s/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30035
    protocol: TCP
    name: postgres
  selector:
    app: postgres
